--- a/src/portals/admin/pages/Users/index.scss
+++ b/src/portals/admin/pages/Users/index.scss
@@ -79,12 +79,12 @@
     > span:last-child {
       margin-right: 10px;
     }
-    .groupPopver {
-      display: none;
-      :global(.icon) {
-        position: static;
-      }
-    }
+    // .groupPopver {
+    //   display: none;
+    //   :global(.icon) {
+    //     position: static;
+    //   }
+    // }
     .groupPopverTarget {
       width: 20px;
       height: 20px;
