--- a/src/pages/Dashboard/Account/index.scss
+++ b/src/pages/Dashboard/Account/index.scss
@@ -1,7 +1,13 @@
 @import '~scss/vars';
 
 .account {
-
+  &.accountBg {
+    padding: 24px;
+    border-radius: 2px;
+    box-shadow: 0 1px 4px 0 rgba(73, 33, 173, 0.06),
+                0 4px 8px 0 rgba(35, 35, 36, 0.04);
+    background-color: $N0;
+  }
   .form {
     &.fromEN {
       .name {
