--- a/src/components/Base/Tree/index.scss
+++ b/src/components/Base/Tree/index.scss
@@ -57,7 +57,8 @@
         position: absolute;
         left: 0;
         right: 0;
-        height: 24px;
+        height: 32px;
+        margin-top: -6px;
         transition: all .3s;
         background: transparent;
       }
