fix: ISV Navigation goBack Icon

--- a/src/components/Layout/SideNav/index.scss
+++ b/src/components/Layout/SideNav/index.scss
@@ -141,7 +141,7 @@
       border-bottom: 1px solid $N10;
 
       .icon {
-        margin: 22px 24px 16px 24px;
+        margin: 22px;
       }
 
       .title {
