--- a/src/components/Layout/SideNav/index.scss
+++ b/src/components/Layout/SideNav/index.scss
@@ -145,7 +145,9 @@
       }
 
       .title {
-        line-height: 63px;
+        line-height: 20px;
+        padding: 22px 0;
+        display: inline-block;
         font-size: 16px;
         color: $N500;
         font-weight: 500;
@@ -167,7 +169,7 @@
 
       :global {
         .pi-popover-popper {
-          margin-left: -10px !important;
+          margin-left: 41px !important;
           margin-bottom: -30px !important;
         }
       }
