--- a/src/components/TableTypes/index.scss
+++ b/src/components/TableTypes/index.scss
@@ -1,21 +1,35 @@
 @import "~scss/vars";
 
 .tableTypes {
+  display: inline-block;
   margin-bottom: 16px;
+  border: 1px solid $N30;
+  border-radius: 2px;
 
   > label {
     display: inline-block;
-    padding: 9px 12px;
-    border-radius: 2px;
+    margin: -1px 0;
+    padding: 8px 12px;
     background-color: $N0;
-    border: 1px solid $N10;
+    border-right: 1px solid $N30;
     font-size: 14px;
     line-height: 14px;
     color: $N300;
     cursor: pointer;
 
+    &:first-child {
+      border-top-left-radius: 2px;
+      border-bottom-left-radius: 2px;
+    }
+
+    &:last-child {
+      border-right: 0 none;
+      border-top-right-radius: 2px;
+      border-bottom-right-radius: 2px;
+    }
+
     &.active {
-      color: $P75;
+      border: 1px solid $P75;
       border-color: $P75;
     }
   }
