--- a/src/components/Layout/SideNav/index.scss
+++ b/src/components/Layout/SideNav/index.scss
@@ -40,6 +40,7 @@
     }
 
     .title {
+      font-size: 14px;
       margin-left: 8px;
       line-height: 40px;
       cursor: pointer;
@@ -108,7 +109,7 @@
       &> span {
         position: relative;
         top: 3px;
-        left: -3px;
+        left: -2px;
       }
 
       &> img {
@@ -120,7 +121,7 @@
     }
 
     .image {
-      font-size: 24px !important;
+      font-size: 20px !important;
       background: none;
       border: none;
     }
