--- a/src/components/Layout/SideNav/index.scss
+++ b/src/components/Layout/SideNav/index.scss
@@ -114,6 +114,12 @@
       vertical-align: middle;
       line-height: 40px;
 
+      &> span {
+        position: relative;
+        top: 3px;
+        left: -3px;
+      }
+
       &> img {
         position: relative;
         width: 24px !important;
