fix: Nav styles (#855)
* fix: ISV Navigation goBack Icon

* fix: App Lists / App Reviews / Categories Layout

* fix: Navigation & AppList Layout

* fix: Side nav icon size

--- a/src/components/Layout/SideNav/index.scss
+++ b/src/components/Layout/SideNav/index.scss
@@ -19,6 +19,7 @@
 
   &:hover {
     width: $menu-width;
+    border-right: 1px solid #d5dae5;
 
     .bottomNav {
       width: $menu-width;
@@ -29,17 +30,24 @@
     height: 40px;
     overflow: hidden;
     margin: auto 12px;
+    line-height: 40px;
+    vertical-align: middle;
 
     a {
       color: $N300;
+      line-height: 40px;
+      vertical-align: middle;
+      display: inline-block;
     }
 
     .icon {
       float: left;
       padding: 10px;
+      line-height: 20px;
     }
 
     .title {
+      font-size: 14px;
       margin-left: 8px;
       line-height: 40px;
       cursor: pointer;
@@ -104,24 +112,23 @@
       height: 40px;
       text-align: center;
       vertical-align: middle;
-
-      &> span {
-        position: relative;
-        top: 3px;
-        left: -3px;
-      }
+      line-height: 40px;
 
       &> img {
         position: relative;
-        top: 8px;
         width: 24px !important;
         height: 24px !important;
       }
     }
 
     .image {
-      font-size: 24px !important;
+      font-size: 16px !important;
       background: none;
+      border: none;
+    }
+    span.image {
+      font-size: 16px !important;
+      background: $N30;
       border: none;
     }
   }
@@ -139,7 +146,7 @@
 
       :global {
         .pi-popover-popper {
-          margin-left: -10px !important;
+          margin-left: 41px !important;
           margin-bottom: -30px !important;
         }
       }
