--- a/src/components/Status/index.scss
+++ b/src/components/Status/index.scss
@@ -15,9 +15,9 @@
 .icon {
   display: inline-block;
   vertical-align: middle;
-  width: 12px;
-  height: 12px;
-  margin: 0 4px 2px 0;
+  width: 8px;
+  height: 8px;
+  margin: 0 4px 0 0;
   border-radius: 50%;
   font-style: normal;
 
