--- a/src/pages/Dashboard/Reviews/Detail/index.scss
+++ b/src/pages/Dashboard/Reviews/Detail/index.scss
@@ -1,8 +1,7 @@
 @import '~scss/vars';
 
 .reviewTitle {
-  margin-bottom: 0;
-  box-shadow: none;
+  margin-bottom: 24px;
 
   .name {
     margin-bottom: 12px;
