--- a/src/components/TableTypes/index.scss
+++ b/src/components/TableTypes/index.scss
@@ -19,11 +19,13 @@
     cursor: pointer;
 
     &:first-child {
+      margin-right: -1px;
       border-top-left-radius: 2px;
       border-bottom-left-radius: 2px;
     }
 
     &:last-child {
+      margin-right: -1px;
       border-right: 0 none;
       border-top-right-radius: 2px;
       border-bottom-right-radius: 2px;
