--- a/src/components/MenuLayer/index.scss
+++ b/src/components/MenuLayer/index.scss
@@ -11,8 +11,13 @@
     height: 32px;
     margin: 0;
 
-    > a,
-    > label {
+    &:hover {
+      a {
+        color: $N500;
+      }
+    }
+
+    &>a {
       display: block;
       line-height: 32px;
       font-size: 12px;
@@ -21,20 +26,17 @@
       border-radius: 0;
       cursor: pointer;
 
-      &:hover {
+      &.active , &:hover {
         background-color: $N10;
         color: $N500;
       }
-    }
 
-    .iconImg {
-      float: left;
-      margin: 8px 8px 8px 15px;
-    }
+      > .icon {
+        float: left;
+        margin: 4px 8px 8px 15px;
+      }
+      > .label {
 
-    &:hover {
-      a {
-        color: $N500;
       }
     }
 
@@ -55,14 +57,18 @@
         height: 32px;
         background-color: $N10;
         border-radius: 50%;
+        text-align: center;
 
-        .iconImg {
-          margin: 6px;
-          svg {
-            --primary-color: #{$N300};
-            --secondary-color: #{$N45};
+        :global {
+          .icon {
+            margin-top: 4px;
+            svg {
+              --primary-color: #{$N300};
+              --secondary-color: #{$N45};
+            }
           }
         }
+
       }
 
       .devIconOuter {
@@ -102,10 +108,6 @@
       @extend %has-bottom;
       padding-bottom: 4px;
       margin-bottom: 4px;
-
-      .iconImg {
-        margin: 8px 8px 8px 15px;
-      }
     }
   }
 
