--- a/src/components/TableTypes/index.scss
+++ b/src/components/TableTypes/index.scss
@@ -5,12 +5,13 @@
   margin-bottom: 16px;
   border: 1px solid $N30;
   border-radius: 2px;
+  background-color: $N0;
+  box-shadow: 0 1px 3px 0 rgba($N400, 0.07);
 
   > label {
     display: inline-block;
     margin: -1px 0;
     padding: 8px 12px;
-    background-color: $N0;
     border-right: 1px solid $N30;
     font-size: 14px;
     line-height: 14px;
@@ -18,19 +19,21 @@
     cursor: pointer;
 
     &:first-child {
+      margin-right: -1px;
       border-top-left-radius: 2px;
       border-bottom-left-radius: 2px;
     }
 
     &:last-child {
+      margin-right: -1px;
       border-right: 0 none;
       border-top-right-radius: 2px;
       border-bottom-right-radius: 2px;
     }
 
     &.active {
+      color: $P75;
       border: 1px solid $P75;
-      border-color: $P75;
     }
   }
 }
