--- a/src/portals/admin/pages/Roles/index.scss
+++ b/src/portals/admin/pages/Roles/index.scss
@@ -22,6 +22,7 @@
   display: flex;
 
   .roleTitle {
+    line-height: 32px;
     flex: 1;
   }
 
@@ -34,6 +35,7 @@
   color: $N75;
   font-size: 12px;
   padding-top: 20px;
+  padding-bottom: 16px;
   padding-left: 6px;
 }
 
@@ -84,9 +86,6 @@
     text-indent: 192px;
     text-align: left;
   }
-}
-.moduleTree {
-  margin-top: 16px;
 }
 
 .roleSuccess {
