--- a/src/pages/Dashboard/Versions/Detail/index.scss
+++ b/src/pages/Dashboard/Versions/Detail/index.scss
@@ -117,6 +117,8 @@
   line-height: 24px;
   font-size: 12px;
   color: $N300;
+  box-shadow: none;
+  padding-top: 0;
 
   > p {
     margin-bottom: 12px;
