fix: Providers table add query approvers
* fix: Provider detail and deploy page style

* fix: All table query app status

--- a/src/components/Base/Table/index.scss
+++ b/src/components/Base/Table/index.scss
@@ -138,6 +138,8 @@
 
     &-thead > tr > th {
       position: relative;
+      box-sizing: border-box;
+      height: 32px;
       padding: 10px 5px;
       line-height: 12px;
       font-weight: normal;
