--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -59,6 +59,10 @@
   font-weight: 500;
   color: $N500;
 
+  &.backTitle {
+    cursor: pointer;
+  }
+
   .backIcon {
     float: left;
     margin-left: -40px;
