--- a/src/pages/Dashboard/Providers/Applications/index.scss
+++ b/src/pages/Dashboard/Providers/Applications/index.scss
@@ -41,3 +41,16 @@
   color: $P75;
   font-size: 12px;
 }
+
+
+.auditorInfo {
+  font-size: 12px;
+  color: $N75;
+
+  .name {
+    display: inline-block;
+    margin-right: 4px;
+    font-weight: 500;
+    color: $N500;
+  }
+}
