--- a/src/components/DetailTabs/index.scss
+++ b/src/components/DetailTabs/index.scss
@@ -2,13 +2,13 @@
 
 .detailTabs {
   padding: 0 24px;
-  height: 47px;
+  height: 48px;
   background: $N0;
   border-bottom: 1px solid $N10;
 
   >label {
     display: inline-block;
-    padding: 15px 0;
+    padding: 16px 0;
     margin-right: 24px;
     line-height: 16px;
     font-size: 14px;
@@ -52,5 +52,5 @@
 }
 
 .cardTabs {
-  margin: 0 -24px 24px;
+  margin: -24px -24px 24px;
 }
