--- a/src/components/DetailTabs/index.scss
+++ b/src/components/DetailTabs/index.scss
@@ -2,7 +2,7 @@
 
 .detailTabs {
   padding: 0 24px;
-  height: 48px;
+  height: 49px;
   background: $N0;
   border-bottom: 1px solid $N10;
 
@@ -52,5 +52,5 @@
 }
 
 .cardTabs {
-  margin: -24px -24px 24px;
+  margin: 0 -24px 24px;
 }
