--- a/src/pages/Dashboard/Reviews/Detail/index.scss
+++ b/src/pages/Dashboard/Reviews/Detail/index.scss
@@ -1,7 +1,7 @@
 @import '~scss/vars';
 
 .reviewTitle {
-  margin-bottom: 40px;
+  margin-bottom: 16px;
 
   .name {
     margin-bottom: 12px;
@@ -97,6 +97,14 @@
 }
 
 .versionReview {
+  .progressLine {
+    margin-left: 20px;
+    border-left: 2px solid $N10;
+
+    & > div {
+      margin-left: -20px;
+    }
+  }
   .title {
     @include note-font;
     margin-bottom: 8px;
@@ -113,6 +121,7 @@
   .pendingReview,
   .passed {
     padding: 12px 20px;
+    margin-bottom: 9px;
   }
 
   .name {
