fix: All app table show isr or user info
* fix: App active versions query in user view

* fix: Cluster detail page react error

--- a/src/components/Base/Table/index.scss
+++ b/src/components/Base/Table/index.scss
@@ -206,6 +206,13 @@
         }
       }
 
+      &.boldFont {
+        @include textCut;
+        max-width: 150px;
+        font-weight: 500;
+        color: $N500;
+      }
+
       &.number {
         color: $N100;
         & > a {
