--- a/src/pages/Dashboard/Reviews/Detail/index.scss
+++ b/src/pages/Dashboard/Reviews/Detail/index.scss
@@ -83,7 +83,12 @@
 
   dl {
     @include note-font;
+    height: 20px;
     margin-bottom: 4px;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
 
     dt,
     dd {
@@ -116,16 +121,21 @@
 
   .submit,
   .unReview,
-  .waitReview,
+  .waitReview {
+    padding: 12px 20px;
+    margin-bottom: 9px;
+  }
+
   .startReview,
   .pendingReview,
   .passed {
-    padding: 12px 20px;
+    padding: 12px 20px 24px;
     margin-bottom: 9px;
   }
 
   .name {
     @include title-font;
+    margin-bottom: 12px;
   }
 
   .status,
@@ -183,7 +193,7 @@
   }
 
   .opreateButtons {
-    margin: 30px 0 12px;
+    margin-top: 40px;
 
     button {
       margin-right: 12px;
