--- a/src/scss/partial/_color.scss
+++ b/src/scss/partial/_color.scss
@@ -98,6 +98,7 @@ $li-bg:#f5f7fa;
 $li-hover-bg: rgba(213, 218, 229, 0.15);
 $link-hover: $P75;
 $tr-hover-bg: $N0;
+$card-tr-hover-bg: $background-color;
 $body-bg: #f9fafb;
 $delete-btn: #ac4949;
 
