feat: Add cloud info page

--- a/src/scss/partial/_form.scss
+++ b/src/scss/partial/_form.scss
@@ -3,3 +3,4 @@ $form-item-margin-bottom: 24px;
 $form-label-width: 168px;
 $form-label-margin-right: 24px;
 $form-input-normal: 256px;
+$form-input-large: 441px;
