fix: My apps no data style
* fix: Version detail and audits page style

--- a/src/pages/Dashboard/Reviews/Detail/index.scss
+++ b/src/pages/Dashboard/Reviews/Detail/index.scss
@@ -83,7 +83,6 @@
 
   dl {
     @include note-font;
-    height: 20px;
     margin-bottom: 4px;
 
     &:last-child {
@@ -96,7 +95,16 @@
     }
 
     dt {
+      float: left;
       width: 60px;
+    }
+
+    dd {
+      width: 280px;
+
+      pre {
+        color: $N300;
+      }
     }
   }
 }
