--- a/src/components/Base/PopoverIcon/index.scss
+++ b/src/components/Base/PopoverIcon/index.scss
@@ -12,7 +12,7 @@
   display: inline-flex;
   justify-content: center;
   align-items: center;
-  border-radius: 1px;
+  border-radius: 2px;
   &.disable {
     opacity: 0.5;
   }
@@ -45,6 +45,7 @@
 }
 .showBorder {
   border: 1px solid $N30;
+  box-shadow: 0 1px 3px 0 rgba($N400, 0.07);
 }
 
 .popover {
