--- a/src/pages/Dashboard/Apps/Audits/index.scss
+++ b/src/pages/Dashboard/Apps/Audits/index.scss
@@ -18,13 +18,20 @@
     > label {
       display: inline-block;
       padding: 9px 12px;
-      border-radius: 2px;
       background-color: $N0;
       border: 1px solid $N10;
       font-size: 14px;
       line-height: 14px;
       color: $N300;
       cursor: pointer;
+
+      &:first-child {
+        border-radius: 2px 0 0 2px;
+      }
+
+      &:last-child {
+        border-radius: 0 2px 2px 0;
+      }
 
       &.active {
         color: $P75;
@@ -45,6 +52,8 @@
 
     .icon {
       float: left;
+      margin-top: 3px;
+      margin-right: 4px;
       svg {
         --primary-color: #{$N300};
         --secondary-color: #{$N300};
@@ -142,4 +151,9 @@
     display: inline-block;
     margin-top: 8px;
   }
+}
+
+.reasonShow {
+  @include textCut;
+  max-width: 300px;
 }
