--- a/src/pages/Dashboard/Apps/MyApps/Empty/index.scss
+++ b/src/pages/Dashboard/Apps/MyApps/Empty/index.scss
@@ -1,25 +1,48 @@
 @import '~scss/vars';
 
 .container {
-  margin: 0 9.2%;
+  margin: 0 8%;
+  background-image: url('/apps-no-data-bg.png');
+  background-position: bottom right;
+  background-repeat: no-repeat;
+  background-size: 60% auto;
+  padding-top: 222px;
 }
 
 .wrapper {
-  margin: 0 auto;
-  padding: 192px 0;
+  position: relative;
+  top: -232px;
+  width: 320px;
+  padding: 192px 0 0;
 }
 
 .title {
+  margin-bottom: 12px;
+  line-height: 40px;
   font-size: 28px;
   font-weight: 500;
-  line-height: 1.43;
   color: $N500;
 }
 
 .description {
-  margin: 12px 0 24px;
+  margin-bottom: 24px;
+  line-height: 28px;
+  font-size: 14px;
+  color: $N400;
 }
 
 .tips {
   margin-top: 20px;
+  line-height: 20px;
+  font-size: 12px;
+  color: $N75;
+
+  .tipsInfo {
+    display: inline-block;
+    margin-right: 4px;
+    width: 32px;
+    background-color: $N30;
+    text-align: center;
+    color: $N100;
+  }
 }
