--- a/src/components/TimeAxis/index.scss
+++ b/src/components/TimeAxis/index.scss
@@ -1,32 +1,33 @@
 @import '~scss/vars';
 
 .timeAxis {
-  margin-left: 10px;
+  margin-left: 4px;
   .axis{
     li{
       position: relative;
-      padding-left: 28px;
-      padding-bottom: 25px;
+      padding-left: 18px;
+      padding-bottom: 24px;
       border-left: 2px solid $N10;
     }
-    .word{
-      margin-bottom: 6px;
-      line-height: 19px;
-      font-size: 16px;
-      font-weight: bold;
-      color: $N500;
+    .title{
+      margin-bottom: 2px;
+      height: 20px;
+      font-family: 'PingFangSC';
+      font-size: 12px;
+      color: $N300;
     }
     .time{
-      line-height: 16px;
-      font-size: 14px;
-      color: $N75;
+      line-height: 20px;
+      font-size: 12px;
+      color: $N65;
     }
 
     .dot{
       display: inline-block;
+      box-sizing: border-box;
       position: absolute;
-      left: -9px;
-      top: 1px;
+      left: -7px;
+      top: -4px;
       width: 12px;
       height: 12px;
       border-radius: 50%;
