--- a/src/components/Toolbar/index.scss
+++ b/src/components/Toolbar/index.scss
@@ -14,6 +14,12 @@
     &:first-child{
       margin-left: 0;
     }
+
+    :global {
+      .icon {
+        margin-top: -2px;
+      }
+    }
   }
 
   .search {
